--- a/app/src/main/res/layout/fragment_resultat.xml
+++ b/app/src/main/res/layout/fragment_resultat.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/imageView9"
             android:layout_width="wrap_content"
-            android:layout_height="300sp"
+            android:layout_height="300dp"
             android:src="@drawable/resultat"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
