--- a/app/src/main/res/layout/fragment_varianti.xml
+++ b/app/src/main/res/layout/fragment_varianti.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/imageView11"
             android:layout_width="wrap_content"
-            android:layout_height="200sp"
+            android:layout_height="200dp"
             android:src="@drawable/var"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
